--- a/lucillegreetings.html
+++ b/lucillegreetings.html
@@ -127,11 +127,11 @@ else{
 }
 hrs = today.getHours();
 if (hrs < 12)
-        greet = 'Good Morning Jordan!';
+        greet = 'Good Morning Lucille!';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon Jordan!';
+        greet = 'Good Afternoon Lucille!';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening Jordan!';
+        greet = 'Good Evening Lucille!';
 // console.log(today.toLocaleTimeString());
 document.getElementById('greet').innerHTML = greet;
 document.getElementById('hour').innerHTML = hour;
